--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "tailwindcss-animated": "^1.0.1",
+    "taos": "^1.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
